fix controllers and services, create the communication for firebase FCM.
