# models/user.go
@@ -6,6 +6,7 @@ type User struct {
 	IDUser      int       `json:"id_user,omitempty"`
 	FirstName   string    `json:"firstname,omitempty"`
 	LastName    string    `json:"lastname,omitempty"`
+	UserName    string    `json:"username,omitempty"`
 	Email       string    `json:"email,omitempty"`
 	Direction   string    `json:"direction,omitempty"`
 	PhoneNumber string    `json:"phone_number,omitempty"`
@@ -19,16 +20,18 @@ type User struct {
 type RegisterUser struct {
 	FirstName       string `json:"firstname" binding:"required"`
 	LastName        string `json:"lastname,omitempty"`
+	UserName        string `json:"username" binding:"required"`
 	Email           string `json:"email" binding:"required,email"`
 	Direction       string `json:"direction,omitempty"`
-	PhoneNumber     string `json:"phone_number" binding:"required"`
+	PhoneNumber     string `json:"phonenumber" binding:"required"`
 	CC              string `json:"cc" binding:"required"`
 	Password        string `json:"password" binding:"required,min=8"`
-	ConfirmPassword string `json:"confirm_password" binding:"required,eqfield=Password"`
+	ConfirmPassword string `json:"passwordc" binding:"required,eqfield=Password"`
 	Role            int    `json:"-"`
 }
 
 type LoginUser struct {
 	Email    string `json:"email" binding:"required"`
 	Password string `json:"password" binding:"required"`
+	Token    string `json:"token,omitempty"`
 }
